[package]
name = "delight_book"
version = "0.1.0"
authors = ["victoryang00 <yangyiwei2000@gmail.com>"]

[dependencies]
libc = "^0"
rand = { version = "^0",default-features = false}
rand_core = { version = "^0", default-features = false }
rand_isaac = { version = "^0", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"