[package]
name = "delight_vm_test"
version = "0.1.0"
edition = "2018"
authors = ["victoryang00 <yangyiwei2000@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minstant = { git = "https://github.com/tikv/minstant.git", branch = "master" }
ckb-vm = {git = "https://github.com/nervosnetwork/ckb-vm.git", branch = "develop",features =["asm"]}
rand = "0.8.4"
bytes = "1.0.1"
clap = "2.33"
memmap = "0.7"
object = "0.20"
addr2line = "0.13.0"